ez not responsive fix lol

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,5 +9,11 @@
   .li-card {
     width: calc(33.3% - 30px);
     margin: 15px;
+
+    .card-text {
+      height: 200px;
+      text-overflow: ellipsis;
+      overflow-y: hidden;
+    }
   }
 }
